--- a/html_css/cheatsheet.html
+++ b/html_css/cheatsheet.html
@@ -1,4 +1,6 @@
-<style src="main.js"></style>
+<link rel="stylesheet" href="styles.css"> <!-- external stylesheet -->
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- set the view to the device -->
 
 <img src="url" alt="alt text">
 
