--- a/html_css/cheatsheet.html
+++ b/html_css/cheatsheet.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="styles.css"> <!-- external stylesheet -->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- set the view to the device -->
+<meta name="description" content="freeCodeCamp Accessibility Quiz practice project" /> <!-- used by search engines to provide a description of your page -->
 
 <img src="url" alt="alt text">
 
